added D and prepared E

--- a/A/Makefile
+++ b/A/Makefile
@@ -3,11 +3,11 @@ all: menu display
 menu: menu.c share.h
 	gcc -Wall -o menu menu.c
 
-disp: disp.c share.h
+display: display.c share.h
 	gcc -Wall -o display display.c
 
 clean:
-	rm -f menu disp is211818
+	rm -f menu display is211818
 
 format:
 	astyle *.c *.h
